librun-parts-perl (0.06.90-1) UNRELEASED; urgency=low

  * New upstream pre-release
  * Remove trailing slash from metacpan.org URLs, use HTTPS.
  * Use dh-dist-zilla for packaging.
    + Drop build-dependency on libmodule-build-perl.
  * Make (build-) dependency on libfile-slurp-perl versioned (found by
    dh-dzil-refresh/dh-make-perl refresh)
  * Move most build-dependencies to Build-Depends-Indep as suggested by
    dh-dzil-refresh/dh-make-perl refresh.

 -- Axel Beckert <abe@debian.org>  Fri, 22 Aug 2014 16:42:09 +0200

librun-parts-perl (0.06-1) unstable; urgency=low

  * New upstream release (docs, build-system and test-suite changes only)
    + Add versioned build-dependency on libmodule-build-perl >= 0.400400
      since 0.4003 as shipped with Perl 5.18.1 does not suffice.
  * Bump Standards-Version to 3.9.5 (no changes)

 -- Axel Beckert <abe@debian.org>  Mon, 28 Oct 2013 20:13:09 +0100

librun-parts-perl (0.04-1) unstable; urgency=low

  * New upstream release.
  * Add new (build-) dependencies:
    + libexporter-easy-perl
    + libfile-slurp-perl
    + libmodern-perl-perl
    + libtest-nowarnings-perl (build-dependency only)

 -- Axel Beckert <abe@debian.org>  Wed, 10 Jul 2013 20:06:39 +0200

librun-parts-perl (0.03-1) unstable; urgency=low

  * Initial Release. (Closes: #714969)

 -- Axel Beckert <abe@debian.org>  Sat, 6 Jul 2013 22:57:30 +0200