@@ -5,3 +5,7 @@
 
 override_dh_clean:
 	dh_clean -Xt/basic-dummy/fnord~ -Xt/basic-dummy/script~
+
+origtargz get-orig-source:
+	git archive --format=tar --output=../`debian/packagename_and_upstream_version.sh`.orig.tar --prefix=`debian/packagename_and_upstream_version.sh`/ master
+	xz -7fv ../`debian/packagename_and_upstream_version.sh`.orig.tar
